--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,13 @@
             <a href="{% url 'posts:listar' %}">Blog</a>
 
             <br>
-            <a href="">INICIAR SESION</a>
-            <a href="">REGISTRARME</a>
+            {% if user.is_authenticated %}
+                <strong>Hola {{user.username}}</strong>
+                <a href="{% url 'logout' %}">LOGOUT</a>
+            {% else %}
+                <a href="{% url 'login' %}">INICIAR SESION</a>
+                <a href="{% url 'usuarios:registro' %}">REGISTRARME</a>
+            {% endif %} 
 
         </div>
 
