--- a/templates/posts/detalle.html
+++ b/templates/posts/detalle.html
@@ -4,8 +4,31 @@
 {% block content %}
 
 <h1>{{ post.titulo }}</h1>
-<p>Categoria: {{post.categoria_post}} Publicado: {{post.fecha}}</p>
+<p>Publicado: {{post.fecha}}</p>
+<p>Categoria: {{post.categoria_post}}</p>
 <img src="{{ post.imagen.url }}" width="300px" height="80%">
 <p>{{post.cuerpo}}</p>
 
+<form method="POST" action="{% url 'posts:comentar' %}">
+    {% csrf_token %}
+    <p>{{ post.id_post }}</p>
+    <textarea name="comentario" maxlength="1500"> </textarea>
+    <input type="text" name="id_post" value="{{ post.pk }}" hidden="">
+    <input type="submit" value="Comentar">
+</form>
+<br>
+<br>
+<h3>Comentarios</h3>
+{% for com in comentarios %}
+
+{% if user == com.usuario %}
+    <a href="">borrar</a>
+{% endif %}
+
+<p>{{com.texto}}</p>
+<strong>{{com.usuario}}</strong>
+<br>
+<strong>{{com.fecha_publicacion}}</strong>
+<br>
+{% endfor %}
 {% endblock content %}
